--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "build": "tsc",
-        "start": "node dist/index.js",
-        "dev": "nodemon index.ts"
+        "build": "tsc src/server.ts",
+        "start": "node dist/server.js",
+        "dev": "nodemon src/server.ts",
+        "test": "dotenv -e .env.test prisma migrate dev && prisma db seed && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest --runInBand"
+    },
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
     },
     "keywords": [],
     "author": "",
@@ -15,21 +19,32 @@
     "dependencies": {
         "@prisma/client": "^4.1.0",
         "axios": "^0.27.2",
-        "chalk": "^5.0.1",
+        "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
+        "dotenv-cli": "^6.0.0",
         "express": "^4.18.1",
         "express-async-errors": "^3.1.1",
         "joi": "^17.6.0",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.7.3"
     },
     "devDependencies": {
+        "@faker-js/faker": "^7.3.0",
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/jest": "^28.1.6",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "^18.0.6",
         "@types/pg": "^8.6.5",
+        "@types/supertest": "^2.0.12",
+        "faker": "^5.5.3",
+        "jest": "^28.1.3",
         "nodemon": "^2.0.19",
         "prisma": "^4.1.0",
+        "supertest": "^6.2.4",
+        "ts-jest": "^28.0.7",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
         "tslib": "^2.4.0",
