--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "build": "tsc src/server.ts",
+        "build": "tsc",
         "start": "node dist/server.js",
         "dev": "nodemon src/server.ts",
         "test": "dotenv -e .env.test prisma migrate dev && prisma db seed && NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest --runInBand"
